--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
+    "react-tabs-scrollable": "^1.0.10",
     "sort-by": "^1.2.0",
     "tailwindcss": "^3.3.5"
   },
